@@ -34,8 +34,14 @@ lists and AVL trees, in a memory-efficient and CPU-efficient way.
 <h2> Programming </h2>
 
 <p>
-FIXME: to be completed.
+ <tt>skalibs/datastruct.h</tt> is a collection of several headers, each
+one defining a specific data structure and providing functions to work on it.
 </p>
+
+<ul>
+ <li> <a href="genqdyn.html"><tt>skalibs/genqdyn.h</tt></a>:&nbsp;dynamically allocated queues for generic objects </li>
+ <li> FIXME: To be completed </li>
+</ul>
 
 </body>
 </html>
