@@ -21,6 +21,7 @@
 <ul>
  <li> New functions: <a href="libstddjb/djbunix.html">execvep_loose()</a>,
 <tt>byte_zzero()</tt> </li>
+ <li> New family of functions: <a href="libdatastruct/genqdyn.html">skalibs/genqdyn.h</a> </li>
 </ul>
 
 <h2> in 2.6.3.1 </h2>
